--- a/templates/localaimanager.mustache
+++ b/templates/localaimanager.mustache
@@ -3,6 +3,7 @@
     <a href="index.php" class="btn btn-secondary mb-3">{{#str}}backtochoice,tool_aitest{{/str}}</a>
     <br/><br/>
     <a href="localaimanager.php?action=test" class="btn btn-primary mb-3">{{#str}}sendtestprompt,tool_aitest{{/str}}</a>
+    <a href="report/ai_action_generate_text.php" class="btn btn-success mb-3">AI Action Generate Text Report</a>
     <br/><br/>
     
     {{#testsubmitted}}
