--- a/templates/localaimanager.mustache
+++ b/templates/localaimanager.mustache
@@ -4,6 +4,7 @@
     <br/><br/>
     <a href="localaimanager.php?action=test" class="btn btn-primary mb-3">{{#str}}sendtestprompt,tool_aitest{{/str}}</a>
     <a href="report/ai_action_generate_text.php" class="btn btn-success mb-3">AI Action Generate Text Report</a>
+    <a href="report/ai_manager_request_log.php" class="btn btn-success mb-3">AI Manager Request Log Report</a>
     <br/><br/>
     
     {{#testsubmitted}}
